# traph

./: .gitignore  LICENSE  README.md  pyproject.toml
src/traph/: algorithms.py  graph.py  graph_constructor.py  main.py
src/traph/ui/: shapes.py  ui.py
