[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "traph"
description = "The terminal graph visualiser no one asked for"
version = "0.0.1"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["graph", "terminal", "game", "visualiser"]
classifiers = [
    "Topic :: Games/Entertainment",
    "Topic :: Terminals"
]
requires-python = ">=3.8"
dependencies = [
    "blessed",
    "bresenham"
]

[project.scripts]
traph = "traph:main.main"

[project.urls]
"Repository" = "https://github.com/1MaxKoval/traph"